lab/network-policy/namespaces/policies/00-only-from-recife.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mangue-policy
  namespace: recife
spec:
  podSelector: {} # traffice from any pod in the recife namespace
