lab/network-policy/namespaces/policies/00-only-local-pod-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mangue-policy
  namespace: recife
spec:
  podSelector: {} # traffic from any pod in the recife namespace
