lab/network-policy/namespaces/policies/01-permissive-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mangue-policy
  namespace: recife
spec:
  podSelector: {} # traffic from any pod in the recife namespace
  ingress:
    - {} # traffic from any pod from others namespaces
