lab/network-policy/namespaces/policies/03-egress-blocked.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mangue-policy
  namespace: recife
spec:
  podSelector: {} # traffic from any pod in the recife namespace
  policyTypes:
    - Egress
  ingress:
    - {} # traffic from any pod from others namespaces
  egress: []
